--- a/template.yaml
+++ b/template.yaml
@@ -34,6 +34,7 @@ Metadata:
         Parameters:
           - ComprehendEntityScoreThreshold
           - SignupAllowedDomains
+          - CdnEnabled
       - Label:
           default: Elasticsearch Configuration
         Parameters:
@@ -122,8 +123,25 @@ Parameters:
     Default: 3
     AllowedValues: [ 3, 5 ]
 
-Conditions: {}
-  #CreateMecabLambda: !Not [!Equals [!Ref MecabLambdaLayerArn, 'arn:aws:lambda:us-east-1:123456789012:layer:dummy:1']]
+  CdnEnabled:
+    Description: CDN for Kibana
+    Type: String
+    Default: 'false'
+    AllowedValues:
+      - 'true'
+      - 'false'
+  
+  CdnDomainName:
+    Type: String
+    Default: ''
+  
+  CdnAcmCertificateArn:
+    Type: String
+    Default: 'arn:aws:acm:us-east-1:123456789012:certificate/xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx'
+    AllowedPattern: ^arn:aws:acm:us-east-1:[0-9]{12}:certificate/[\w\-]+$
+
+Conditions:
+  CdnEnabled: !Equals [ !Ref CdnEnabled, 'true' ]
 
 Resources:
 
@@ -469,6 +487,17 @@ Resources:
       Parameters:
         ParentStackName: !Ref AWS::StackName
         TweetStreamArn : !GetAtt TweetStream.Arn
+
+  CDNStack:
+    Type: AWS::CloudFormation::Stack
+    Condition: CdnEnabled
+    Properties:
+      TemplateURL: nested-stack/cdn.yaml
+      Parameters:
+        ParentStackName: !Ref AWS::StackName
+        OriginDomainName : !GetAtt ElasticsearchStack.Outputs.ElasticsearchDomainEndpoint
+        CdnDomainName: !Ref CdnDomainName
+        CdnAcmCertificateArn: !Ref CdnAcmCertificateArn
 
   # Lambda Layers --------------------------------------
   LambdaPowertoolsPythonLayer:
