--- a/template.yaml
+++ b/template.yaml
@@ -439,7 +439,8 @@ Resources:
         VpcId: !GetAtt VpcStack.Outputs.VpcId
         PublicSubnetList: !GetAtt VpcStack.Outputs.PublicSubnetList
         TweetStreamName: !Ref TweetStream
-        DockerImage: !GetAtt ContainerRepoStack.Outputs.ImageName
+        TwitterProducerImage: !GetAtt ContainerRepoStack.Outputs.TwitterProducerImage
+        FluentBitImage: !GetAtt ContainerRepoStack.Outputs.FluentBitImage
         TwitterTopicsParameter: !Ref TwitterTopicsParameter
         TwitterLanguagesParameter: !Ref TwitterLanguagesParameter
         TwitterFilterLevelParameter: !Ref TwitterFilterLevelParameter
@@ -456,6 +457,7 @@ Resources:
         ParentStackName: !Ref AWS::StackName
         CustomResourceHelperLayer: !Ref CustomResourceHelperLayer
         DockerfileLayer: !Ref DockerfileLayer
+        ImageVersion: '1.0'
 
   ElasticsearchStack:
     Type: AWS::CloudFormation::Stack
